Fixing DOM visibility

--- a/css/index.css
+++ b/css/index.css
@@ -319,3 +319,7 @@
 #scratch {
     background-color: cadetblue;
 }
+
+.signin-contatiner, .create-container {
+    background-color: cadetblue;
+}
